@@ -2,8 +2,6 @@
    xmlns:zope="http://namespaces.zope.org/zope"
    xmlns="http://namespaces.zope.org/browser">
 
-  <include package="plone.z3cform.wysiwyg" />
-  
   <include package=".portlets" />
 
   <!-- Vocabularies and field overrides -->
