@@ -1,8 +1,8 @@
 from zope import interface
 from zope import schema
 
-from plone.z3cform.queryselect import ArchetypesContentSourceBinder
-from plone.z3cform.queryselect import uid2wref
+from plone.app.z3cform.queryselect import ArchetypesContentSourceBinder
+from plone.app.z3cform.queryselect import uid2wref
 
 from collective.dancing import MessageFactory as _
 
