@@ -7,6 +7,7 @@
    i18n_domain="collective.dancing">
 
   <include package="collective.singing" />
+  <include package="plone.app.z3cform" />
   <include package="five.intid" />
 
   <!-- Prevent scripts from being intid'ed.
