@@ -33,7 +33,8 @@ setup(name='collective.dancing',
       # 2 environment, try the `fakezope2eggs` recipe
       install_requires=[
           'setuptools',
-          'collective.singing>=0.4dev,<0.5dev',
+          'collective.singing>=0.5dev',
+          'plone.app.z3cform>=0.3dev',
           'five.intid',
           'StoneageHTML',
       ],
