@@ -4,6 +4,9 @@ History
 Version 0.5.0 - unreleased
 --------------------------
 
+- Depend on 0.3 or higher of plone.app.z3cform.
+  [nouri]
+
 Version 0.4 - 2008-07-23
 ------------------------
 
